  * Fix hppa kernel selection: "64?" and "(64)?" are not the same thing in
    regular expressions!
  * Add armel/qemu-versatilepb test; cpuinfo supplied by Oliver Grawert.

  [ Christian Perrier ]
  * Correct an error in the Spanish translation. Closes: #510310

  [ Jens Seidel ]
  * Minor correction in German translation.  Closes: #512828.

 -- Ian Campbell <ijc@hellion.org.uk>  Mon, 24 Nov 2008 07:13:47 +0000

base-installer (1.98) unstable; urgency=low

  [ Colin Watson ]
  * Add support for AMD CPU families 16 (Phenom) and 17 (Griffin/Puma) on
    i386 (thanks, Roger Mach and Soren Hansen).
  
  [ Updated translations ]
  * Belarusian (be.po) by Pavel Piatruk
  * Bengali (bn.po) by Mahay Alam Khan (মাহে আলম খান)
  * Bosnian (bs.po) by Armin Besirovic
  * Danish (da.po)
  * Esperanto (eo.po) by Felipe Castro
  * Hungarian (hu.po) by SZERVÁC Attila
  * Latvian (lv.po) by Aigars Mahinovs
  * Macedonian (mk.po) by Arangel Angov
  * Panjabi (pa.po) by Amanpreet Singh Alam
  * Slovenian (sl.po) by Vanja Cvelbar
  * Albanian (sq.po) by Elian Myftiu
  * Serbian (sr.po) by Veselin Mijušković
  * Ukrainian (uk.po) by Євгеній Мещеряков

 -- Otavio Salvador <otavio@debian.org>  Sun, 21 Sep 2008 21:49:10 -0300

base-installer (1.96) unstable; urgency=low

  * Only set driver inclusion policy if other than 'most'. The maintainer
    of initramfs-tools assures us that the default will not change.

  [ Updated translations ]
  * Catalan (ca.po) by Jordi Mallach
  * German (de.po) by Jens Seidel
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Finnish (fi.po) by Esko Arajärvi
  * Hebrew (he.po) by Omer Zak
  * Hindi (hi.po) by Kumar Appaiah
  * Croatian (hr.po) by Josip Rodin
  * Hungarian (hu.po) by SZERVÁC Attila
  * Indonesian (id.po) by Arief S Fitrianto
  * Georgian (ka.po) by Aiet Kolkhi
  * Central Khmer (km.po) by KHOEM Sokhem
  * Korean (ko.po) by Changwoo Ryu
  * Malayalam (ml.po) by പ്രവീണ്‍ അരിമ്പ്രത്തൊടിയില്‍
  * Marathi (mr.po) by Sampada